--- a/tom-yam-kung.html
+++ b/tom-yam-kung.html
@@ -141,7 +141,7 @@
     </section>
 
     <section class="recomendations-recipe">
-      <h1>Otras recetas que quizás te interesen</h1>
+      <h1>Otras recetas que pueden interesarte</h1>
       <div class="container-recomendations">
           <div class="recomendations-object recomendations-object-tom-yam"> 
             <div><a class="card-link" href="kaeng-phet-gai.html">Kaeng Phet Gai</a></div>
