--- a/kaeng-phet-gai.html
+++ b/kaeng-phet-gai.html
@@ -137,7 +137,7 @@
     </section>
 
     <section class="recomendations-recipe">
-      <h1>Otras recetas que quizás te interesen</h1>
+      <h1>Otras recetas que pueden interesarte</h1>
       <div class="container-recomendations">
           <div class="recomendations-object"> 
             <div><a class="card-link" href="tom-yam-kung.html">Tom Yam Kung</a></div>
