--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -34,13 +34,16 @@
 
   <main>
     <section class="container-about-us">
-      <div class="about-us-photo">
-        <img src="img/sobre-nosotros.jpg" alt="mujer de viaje por Tailandia">
-      </div>
+        <div class="about-us-photo">
+          <div>
+            <p>Hora Bangkok</p>
+            <p id="hora-bangkok"></p>
+          </div>
+        </div>
+             
       <div class="about-us-description">
         <img src="img/logotipo-2.png" alt="logotipo en positivo de DOM SUM">
         <p>Encantados de conocerte, somos cuatro amigos a los que nos apasiona viajar e investigar sobre la gastronomía de los lugares que tenemos el placer de visitar. Hemos decidido hacer este blog para dar a conocer un poquito más la comida de Tailandia, son muchas las personas que se deciden a viajar a Tailandia por sus playas e increíble clima cálido pero no todo el mundo es consciente de la riqueza gastronómica de mi país, con infinidad de platos, ingredientes y sabores que sorprenden al viajero que decide a probarlos.</p>
-      </div>
     </section>
 
     <section class="container-people">
