--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <img src="img/logotipo.png" alt="logotipo de DOM SUM">
       <h1>Sumérgete en la gastronomía tailandesa</h1>
       <a href="recetas.html">Ver recetas</a>
+    </div>
   </main>
 
   <script src="index.js"></script>
