--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -34,16 +34,17 @@
 
   <main>
     <section class="container-about-us">
-        <div class="about-us-photo">
-          <div>
-            <p>Hora Bangkok</p>
-            <p id="hora-bangkok"></p>
-          </div>
+      <div class="about-us-photo">
+        <div>
+          <h2>Hora Bangkok</h2>
+          <p id="hora-bangkok"></p>
         </div>
-             
+      </div>
+      
       <div class="about-us-description">
         <img src="img/logotipo-2.png" alt="logotipo en positivo de DOM SUM">
         <p>Encantados de conocerte, somos cuatro amigos a los que nos apasiona viajar e investigar sobre la gastronomía de los lugares que tenemos el placer de visitar. Hemos decidido hacer este blog para dar a conocer un poquito más la comida de Tailandia, son muchas las personas que se deciden a viajar a Tailandia por sus playas e increíble clima cálido pero no todo el mundo es consciente de la riqueza gastronómica de mi país, con infinidad de platos, ingredientes y sabores que sorprenden al viajero que decide a probarlos.</p>
+      </div>
     </section>
 
     <section class="container-people">
@@ -81,7 +82,7 @@
       </div>
       <div class="form-fields">
         <form id="form" class="form">
-          <fieldset id="formulario de contacto">
+          <fieldset id="formulario-contacto">
             <div>
               <input class="feedback-input" type="text" name="name" id="name" placeholder="Nombre">
               <p class="warnings" id="warning-name"></p>
@@ -91,7 +92,7 @@
               <p class="warnings" id="warning-email"></p>
             </div>
             <div>
-              <textarea class="feedback-input" type="text" name="message" id="message" placeholder="Escribe un mensaje"></textarea>
+              <textarea class="feedback-input" name="message" id="message" placeholder="Escribe un mensaje"></textarea>
               <p class="warnings" id="warning-message"></p>
             </div>
             <div class="submit">
