--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
+          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload" loading="lazy">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -44,7 +44,7 @@
 
     <section class="logo-index">
       <div>
-        <img src="img/logotipo.svg" alt="logotipo de DOM SUM">
+        <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="lazyload" loading="lazy">
         <h1>Disfruta de la gastronomía tailandesa</h1>
         <a href="recetas.html">Ver recetas</a>
       </div>
@@ -52,7 +52,7 @@
         <source media="(max-width: 576px)" srcset="img/background-index-576.webp">
         <source media="(max-width: 992px)" srcset="img/background-index-992.webp">
         <source media="(min-width: 993px)" srcset="img/background-index-1280.webp">
-        <img src="img/background-index-1280.jpg" alt="Mercado flotante Khlong Lat Mayom">
+        <img data-src="img/background-index-1280.jpg" alt="Mercado flotante Khlong Lat Mayom"  class="lazyload" loading="lazy">
       </picture>    
     </section>
 
@@ -66,7 +66,7 @@
               <source media="(max-width: 576px)" srcset="img/destacado-recetas-576.webp">
               <source media="(max-width: 992px)" srcset="img/destacado-recetas-992.webp">
               <source media="(min-width: 993px)" srcset="img/destacado-recetas-1280.webp">
-              <img src="img/destacado-recetas-1280.jpg" alt="Thai Cookery School">
+              <img data-src="img/destacado-recetas-1280.jpg" alt="Thai Cookery School"  class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
               <i class="fas fa-map-marker-alt"></i>
@@ -83,7 +83,7 @@
               <source media="(max-width: 576px)" srcset="img/destacado-naturaleza-576.webp">
               <source media="(max-width: 992px)" srcset="img/destacado-naturaleza-992.webp">
               <source media="(min-width: 993px)" srcset="img/destacado-naturaleza-1280.webp">
-              <img src="img/destacado-naturaleza-1280.jpg" alt="Boon Lott’s Elephant Sanctuary">
+              <img data-src="img/destacado-naturaleza-1280.jpg" alt="Boon Lott’s Elephant Sanctuary"  class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
               <i class="fas fa-map-marker-alt"></i>
@@ -100,7 +100,7 @@
               <source media="(max-width: 576px)" srcset="img/destacado-tradicion-576.webp">
               <source media="(max-width: 992px)" srcset="img/destacado-tradicion-992.webp">
               <source media="(min-width: 993px)" srcset="img/destacado-tradicion-1280.webp">
-              <img src="img/destacado-tradicion-1280.jpg" alt="Sala Chalermkrung Royal Theatre">
+              <img data-src="img/destacado-tradicion-1280.jpg" alt="Sala Chalermkrung Royal Theatre" class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
               <i class="fas fa-map-marker-alt"></i>
@@ -119,7 +119,7 @@
           <source media="(max-width: 576px)" srcset="img/turismo-576.webp">
           <source media="(max-width: 992px)" srcset="img/turismo-992.webp">
           <source media="(min-width: 993px)" srcset="img/turismo-1280.webp">
-          <img src="img/turismo-1280.jpg" alt="Khao Lak">
+          <img data-src="img/turismo-1280.jpg" alt="Khao Lak" class="lazyload" loading="lazy">
         </picture>
       </section>
     </main>
