--- a/kaeng-phet-gai.html
+++ b/kaeng-phet-gai.html
@@ -18,9 +18,9 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
-          <p>Gastronomía tailandesa </p>
+          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload"  loading="lazy">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
+          <p>Gastronomía tailandesa</p>
         </div>
       </a>
 
@@ -43,16 +43,16 @@
       <div>
           <h1>Kaeng Phet Gai</h1>
           <div class="spicy">
-          <img src="img/picante.svg" alt="Medidor de picante">
-          <img src="img/picante.svg" alt="Medidor de picante">
-          <img src="img/picante.svg" alt="Medidor de picante">
+          <img data-src="img/picante.svg" alt="Medidor de picante" class="lazyload"  loading="lazy">
+          <img data-src="img/picante.svg" alt="Medidor de picante" class="lazyload"  loading="lazy">
+          <img data-src="img/picante.svg" alt="Medidor de picante" class="lazyload"  loading="lazy">
         </div>
       </div>
       <picture>
         <source media="(max-width: 576px)" srcset="img/kaeng-phet-gai-banner-576.webp">
         <source media="(max-width: 992px)" srcset="img/kaeng-phet-gai-banner-992.webp">
         <source media="(min-width: 993px)" srcset="img/kaeng-phet-gai-banner-1280.webp">
-        <img src="img/kaeng-phet-gai-banner-1280.jpg" alt="Receta de Kaeng Phet Gai">
+        <img data-src="img/kaeng-phet-gai-banner-1280.jpg" alt="Receta de Kaeng Phet Gai" class="lazyload"  loading="lazy">
       </picture> 
     </section>
 
@@ -65,7 +65,9 @@
             <img  srcset="img/curry-rojo-330.webp,
                           img/curry-rojo-495.webp 1.5x,
                           img/curry-rojo-660.webp 2x"
-                  src="img/curry-rojo-660.jpg"
+                  data-src="img/curry-rojo-660.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Curry rojo">
             <figcaption>Curry rojo x 50 g</figcaption>
           </figure>
@@ -74,7 +76,9 @@
             <img  srcset="img/cebolla-330.webp,
                           img/cebolla-495.webp 1.5x,
                           img/cebolla-660.webp 2x"
-                  src="img/cebolla-660.jpg"
+                  data-src="img/cebolla-660.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Cebolla">
             <figcaption>Cebolla x 1 und.</figcaption>
           </figure>
@@ -84,7 +88,9 @@
                           img/leche-coco-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/leche-coco-330.jpg"
+                  data-src="img/leche-coco-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Leche de coco">
             <figcaption>Coco x 400 g</figcaption>
           </figure>
@@ -94,7 +100,9 @@
                           img/pimiento-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/pimiento-330.jpg"
+                  data-src="img/pimiento-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Pimiento">
             <figcaption>Pimiento x 2 unds.</figcaption>
           </figure>
@@ -104,7 +112,9 @@
                           img/calabacin-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/calabacin-330.jpg"
+                  data-src="img/calabacin-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Calabacin">
             <figcaption>Calabacín x 1 und.</figcaption>
           </figure>
@@ -114,7 +124,9 @@
                           img/cebollin-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                         230px"
-                  src="img/cebollin-330.jpg"
+                  data-src="img/cebollin-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Cebollín">
             <figcaption>Cebollín x 1 und.</figcaption>
           </figure>
@@ -124,7 +136,9 @@
                           img/muslo-pollo-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/muslo-pollo-330.jpg"
+                  data-src="img/muslo-pollo-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Muslo de pollo">
             <figcaption>Pollo x 400 g</figcaption>
           </figure>
@@ -134,7 +148,9 @@
                           img/azucar-moreno-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/azucar-moreno-330.jpg"
+                  data-src="img/azucar-moreno-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Azúcar moreno">
             <figcaption>Azúcar x 30 g</figcaption>
           </figure>
@@ -144,7 +160,9 @@
                           img/aceite-oliva-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/aceite-oliva-330.jpg"
+                  data-src="img/aceite-oliva-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Aceite de oliva">
             <figcaption>Aceite x 30 ml</figcaption>
           </figure>
@@ -154,7 +172,9 @@
                           img/chile-rojo-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                   230px"
-                  src="img/chile-rojo-330.jpg"
+                  data-src="img/chile-rojo-330.jpg"
+                  class="lazyload"  
+                  loading="lazy"
                   alt="Chile rojo">
             <figcaption>Chile rojo x 3 unds.</figcaption>
           </figure>
@@ -164,7 +184,9 @@
                           img/ajo-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/ajo-330.jpg"
+                  data-src="img/ajo-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Ajo">
             <figcaption>Ajo x 1 und.</figcaption>
           </figure>
@@ -174,7 +196,9 @@
                           img/lima-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/lima-330.jpg"
+                  data-src="img/lima-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Lima kaffir">
             <figcaption>Lima Kaffir x 30 ml</figcaption>
           </figure>
@@ -222,7 +246,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/tom-yang-520.jpg"
+                  data-src="img/tom-yang-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Tom Yam Kung">
           </div>
 
@@ -236,7 +262,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/kai-med-ma-muang-520.jpg"
+                  data-src="img/kai-med-ma-muang-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Kai Med Ma Muang">
           </div>
 
@@ -250,7 +278,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/khao-soi-520.jpg"
+                  data-src="img/khao-soi-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Khao Soi">
           </div>
 
@@ -264,7 +294,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/curry-masam-520.jpg"
+                  data-src="img/curry-masam-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Curry Massaman">
           </div>
 
@@ -278,7 +310,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/som-tum-520.jpg"
+                  data-src="img/som-tum-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Som Tum">
           </div>
       </div>
