--- a/recetas.html
+++ b/recetas.html
@@ -18,9 +18,9 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
-          <p>Gastronomía tailandesa </p>
+          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload" loading="lazy">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
+          <p>Gastronomía tailandesa</p>
         </div>
       </a>
 
@@ -48,6 +48,7 @@
                     (max-width: 992px) 470px,
                     420px"
             src="img/kaeng-phet-gai-520.jpg"
+            loading="lazy"
             alt="Receta de Kaeng Phet Gai">
       <h4>Kaeng Phet Gai</h4>
       <p>Tradicional plato de pollo y calabacín al curry rojo con un pequeño toque picante</p>
@@ -61,7 +62,9 @@
             sizes="(max-width: 576px) 520px,
                     (max-width: 992px) 470px,
                     420px"
-            src="img/tom-yang-520.jpg"
+            data-src="img/tom-yang-520.jpg"
+            class="lazyload"
+            loading="lazy"
             alt="Receta de tom Yam Kung">
       <h4>Tom Yam Kung</h4>
       <p>Sopa de langostinos y leche de coco con un punto picante y muy aromatizada</p>
@@ -75,7 +78,9 @@
             sizes="(max-width: 576px) 520px,
                     (max-width: 992px) 470px,
                     420px"
-            src="img/kai-med-ma-muang-520.jpg"
+            data-src="img/kai-med-ma-muang-520.jpg"
+            class="lazyload"
+            loading="lazy"
             alt="Receta de Kai Med Ma Muang">
       <h4>Kai Med Ma Muang</h4>
       <p>Salteado de pollo con anarcados fritos y verduras acompañado de salsa de soja</p>
@@ -89,7 +94,9 @@
             sizes="(max-width: 576px) 520px,
                     (max-width: 992px) 470px,
                     420px"
-            src="img/khao-soi-520.jpg"
+            data-src="img/khao-soi-520.jpg"
+            class="lazyload"
+            loading="lazy"
             alt="Receta de Khao Soi">
       <h4>Khao Soi</h4>
       <p>Fideos de huevo frescos y pollo en un rico y caliente caldo de coco y especias</p>
@@ -103,7 +110,9 @@
             sizes="(max-width: 576px) 520px,
                     (max-width: 992px) 470px,
                     420px"
-            src="img/som-tum-520.jpg"
+            data-src="img/som-tum-520.jpg"
+            class="lazyload"
+            loading="lazy"
             alt="Receta de Som Tum">
       <h4>Som Tum</h4>
       <p>Ensalada picante de papaya verde, con una textura crujiente y sabrosa</p>
@@ -117,7 +126,9 @@
             sizes="(max-width: 576px) 520px,
                     (max-width: 992px) 470px,
                     420px"
-            src="img/curry-masam-520.jpg"
+            data-src="img/curry-masam-520.jpg"
+            class="lazyload"
+            loading="lazy"
             alt="Receta de Curry Massaman">
       <h4>Curry Massaman</h4>
       <p>Sabor proveniente del reino de Siam, curry suave lleno de especias y sabor</p>
