--- a/tom-yam-kung.html
+++ b/tom-yam-kung.html
@@ -18,9 +18,9 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
-          <p>Gastronomía tailandesa </p>
+          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload"  loading="lazy">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
+          <p>Gastronomía tailandesa</p>
         </div>
       </a>
 
@@ -43,16 +43,16 @@
       <div>
           <h1>Tom Yam Kung</h1>
           <div class="spicy spicy-tom-yam-kung">
-          <img src="img/picante.svg" alt="Medidor de picante">
-          <img src="img/picante.svg" alt="Medidor de picante">
-          <img src="img/picante.svg" alt="Medidor de picante">
+          <img data-src="img/picante.svg" alt="Medidor de picante" class="lazyload"  loading="lazy">
+          <img data-src="img/picante.svg" alt="Medidor de picante"  class="lazyload"  loading="lazy">
+          <img data-src="img/picante.svg" alt="Medidor de picante" class="lazyload"  loading="lazy">
         </div>
       </div>
       <picture>
         <source media="(max-width: 576px)" srcset="img/tom-yang-banner-576.webp">
         <source media="(max-width: 992px)" srcset="img/tom-yang-banner-992.webp">
         <source media="(min-width: 993px)" srcset="img/tom-yang-banner-1280.webp">
-        <img src="img/tom-yang-banner-1280.jpg" alt="Receta de Tom Yam Kung">
+        <img data-src="img/tom-yang-banner-1280.jpg" alt="Receta de Tom Yam Kung" class="lazyload"  loading="lazy">
       </picture> 
     </section>
 
@@ -66,7 +66,9 @@
                             img/setas-230.webp 230w"
                     sizes="(max-width: 992px) 330px,
                             230px"
-                    src="img/setas-330.jpg"
+                    data-src="img/setas-330.jpg"
+                    class="lazyload"
+                    loading="lazy"
                     alt="Setas">
             <figcaption>Setas x 60 g</figcaption>
           </figure>
@@ -76,7 +78,9 @@
                           img/chalota-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/chalota-330.jpg"
+                  data-src="img/chalota-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Chalota">           
             <figcaption>Chalota x 1 und.</figcaption>
           </figure>
@@ -86,7 +90,9 @@
                           img/leche-coco-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/leche-coco-330.jpg"
+                  data-src="img/leche-coco-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Leche de coco">
             <figcaption>Coco x 200 g</figcaption>
           </figure>
@@ -96,7 +102,9 @@
                           img/langostinos-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/langostinos-330.jpg"
+                  data-src="img/langostinos-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Langostinos">
             <figcaption>Langostinos x 150 g</figcaption>
           </figure>
@@ -106,7 +114,9 @@
                           img/galangal-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/galangal-330.jpg"
+                  data-src="img/galangal-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Galangal">
             <figcaption>Galangal x 4 rodajas</figcaption>
           </figure>
@@ -116,7 +126,9 @@
                           img/caldo-pollo-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                src="img/caldo-pollo-330.jpg"
+                data-src="img/caldo-pollo-330.jpg"
+                class="lazyload"
+                loading="lazy"
                 alt="Caldo de pollo">
             <figcaption>Caldo x 400 ml</figcaption>
           </figure>
@@ -126,7 +138,9 @@
                           img/cilantro-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/cilantro-330.jpg"
+                  data-src="img/cilantro-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Cilantro">
             <figcaption>Cilantro x 3 tallos</figcaption>
           </figure>
@@ -136,7 +150,9 @@
                           img/azucar-moreno-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/azucar-moreno-330.jpg"
+                  data-src="img/azucar-moreno-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Azúcar moreno">
             <figcaption>Azúcar x 30 g</figcaption>
           </figure>
@@ -146,7 +162,9 @@
                           img/limoncillo-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/limoncillo-330.jpg"
+                  data-src="img/limoncillo-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Limoncillo">
             <figcaption>Limoncillo x 1 tallo</figcaption>
           </figure>
@@ -156,7 +174,9 @@
                           img/chile-rojo-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                   230px"
-                  src="img/chile-rojo-330.jpg"
+                  data-src="img/chile-rojo-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Chile rojo">
             <figcaption>Chile rojo x 3 unds.</figcaption>
           </figure>
@@ -166,7 +186,9 @@
                           img/ajo-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/ajo-330.jpg"
+                  data-src="img/ajo-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Ajo">
             <figcaption>Ajo x 1 und.</figcaption>
           </figure>
@@ -176,7 +198,9 @@
                           img/lima-230.webp 230w"
                   sizes="(max-width: 992px) 330px,
                           230px"
-                  src="img/lima-330.jpg"
+                  data-src="img/lima-330.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Lima kaffir">
             <figcaption>Lima Kaffir x 30 ml</figcaption>
           </figure>
