--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -17,8 +17,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
+          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload"  loading="lazy">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -48,7 +48,7 @@
       </div>
       
       <div class="about-us-description">
-        <img src="img/logotipo.svg" alt="logotipo de DOM SUM">
+        <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM"  loading="lazy">
         <p>Encantados de conocerte, somos cuatro amigos a los que nos apasiona viajar e investigar sobre la gastronomía de los lugares que tenemos el placer de visitar. Hemos decidido hacer este blog para dar a conocer un poquito más la comida de Tailandia, son muchas las personas que se deciden a viajar a Tailandia por sus playas e increíble clima cálido pero no todo el mundo es consciente de la riqueza gastronómica de mi país, con infinidad de platos, ingredientes y sabores que sorprenden al viajero que decide a probarlos.</p>
       </div>
     </section>
@@ -61,7 +61,9 @@
               sizes="(max-width: 576px) 520px,
                       (max-width: 992px) 450px,
                       400px"
-              src="img/amaia-520.jpg"
+              data-src="img/amaia-520.jpg"
+              class="lazyload"
+              loading="lazy"
               alt="Amaia, la historiadora del equipo">
         <div>
           <h4>Amaia</h4>
@@ -76,7 +78,9 @@
                 sizes="(max-width: 576px) 520px,
                         (max-width: 992px) 450px,
                         400px"
-                src="img/helena-520.jpg"
+                data-src="img/helena-520.jpg"
+                class="lazyload"
+              loading="lazy"
                 alt="Helena, la veterinaria del equipo">
         <div>
           <h4>Helena</h4>
@@ -91,7 +95,9 @@
                 sizes="(max-width: 576px) 520px,
                         (max-width: 992px) 450px,
                         400px"
-                src="img/alejandro-520.jpg"
+                data-src="img/alejandro-520.jpg"
+                class="lazyload"
+              loading="lazy"
                 alt="Alejandro, el deportista del equipo">
           <div>
             <h4>Alejandro</h4>
@@ -106,7 +112,9 @@
                 sizes="(max-width: 576px) 520px,
                         (max-width: 992px) 450px,
                         400px"
-                src="img/gabriel-520.jpg"
+                data-src="img/gabriel-520.jpg"
+                class="lazyload"
+                loading="lazy"
                 alt="Gabriel, el viajero del equipo">
         <div>
           <h4>Gabriel</h4>
