--- a/documentacion.html
+++ b/documentacion.html
@@ -18,7 +18,7 @@
       <a href="index.html">
         <div>
           <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload"  loading="lazy">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -219,6 +219,6 @@
     </div>
   </footer>
 
-  <script src="index.js"></script>
+  <script async src="index.js"></script>
 </body>
 </html>
