--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -221,6 +221,6 @@
       </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script async src="index.js"></script>
   </body>
 </html>
