--- a/index.html
+++ b/index.html
@@ -151,6 +151,6 @@
       </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script async src="index.js"></script>
   </body>
 </html>
