--- a/kaeng-phet-gai.html
+++ b/kaeng-phet-gai.html
@@ -346,6 +346,6 @@
       </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script async src="index.js"></script>
   </body>
 </html>
