--- a/recetas.html
+++ b/recetas.html
@@ -163,6 +163,6 @@
       </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script async src="index.js"></script>
   </body>
 </html>
