--- a/tom-yam-kung.html
+++ b/tom-yam-kung.html
@@ -342,6 +342,6 @@
       </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script async src="index.js"></script>
   </body>
 </html>
