--- a/documentacion.html
+++ b/documentacion.html
@@ -17,8 +17,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload"  loading="lazy">
-          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
+          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -219,6 +219,6 @@
     </div>
   </footer>
 
-  <script async src="index.js"></script>
+  <script async src="javascript/comun.js"></script>
 </body>
 </html>
