--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload" loading="lazy">
-          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
+          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
+          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -44,7 +44,7 @@
 
     <section class="logo-index">
       <div>
-        <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="lazyload" loading="lazy">
+        <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM">
         <h1>Disfruta de la gastronomía tailandesa</h1>
         <a href="recetas.html">Ver recetas</a>
       </div>
@@ -151,6 +151,7 @@
       </div>
     </footer>
 
-    <script async src="index.js"></script>
+    <script async src="javascript/index.js"></script>
+    <script async src="javascript/comun.js"></script>
   </body>
 </html>
