--- a/kaeng-phet-gai.html
+++ b/kaeng-phet-gai.html
@@ -18,8 +18,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img data-src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img data-src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
+          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
+          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
