--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -221,7 +221,7 @@
       </div>
     </footer>
 
-    <script async src="sobre-nosotros.js"></script>
+    <script async src="javascript/sobre-nosotros.js"></script>
     <script async src="javascript/comun.js"></script>
   </body>
 </html>
