--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
