--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css&display=swap">
+  <link rel="preload" as="font">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 </head>
 
 <body class="body-index">
