--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -8,9 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Sobre nosotros</title>
-  <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" as="font" crossorigin>
-
+  <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 </head>
 
 <body>
