--- a/documentacion.html
+++ b/documentacion.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Sobre nosotros</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
+  <link rel="preload" as="font">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 </head>
 
