--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <link rel="preload" as="style" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/font-awesome.min.css"/>
-  <link rel="preload" as="font" type="font/woff2" crossorigin href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/fonts/fontawesome-webfont.woff2?v=5.10.2"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 </head>
 
 <body class="body-index">
