--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Sobre nosotros</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
-  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="fonts/css/all.min.css">
 
 </head>
 
