--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <link rel="stylesheet" href="fonts/css/all.min.css">
+  <link rel="stylesheet" href="fonts/css/all.min.css"  async="true" >
 </head>
 
 <body class="body-index">
