--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <link rel="stylesheet" href="fonts/css/all.min.css"  async="true" >
+  <link rel="stylesheet" href="fonts/css/all.min.css" >
 </head>
 
 <body class="body-index">
@@ -17,8 +17,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
+          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload" loading="lazy">
+          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -43,7 +43,7 @@
 
     <section class="logo-index">
       <div>
-        <img src="img/logotipo.svg" alt="logotipo de DOM SUM">
+        <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="lazyload" loading="lazy">
         <h1>Disfruta de la gastronomía tailandesa</h1>
         <a href="recetas.html">Ver recetas</a>
       </div>
