--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo lazyload" loading="lazy">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce lazyload" loading="lazy">
+          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo" loading="lazy">
+          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -43,7 +43,7 @@
 
     <section class="logo-index">
       <div>
-        <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="lazyload" loading="lazy">
+        <img src="img/logotipo.svg" alt="logotipo de DOM SUM" loading="lazy">
         <h1>Disfruta de la gastronomía tailandesa</h1>
         <a href="recetas.html">Ver recetas</a>
       </div>
