--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
+  <link rel="stylesheet" href="fonts/css/all.min.css" >
 </head>
 
 <body class="body-index">
@@ -126,16 +127,16 @@
       <div>
         <div class="footer-right">
           <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-f" loading="lazy"></i>
           </a>
           <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter" loading="lazy"></i>
           </a>
           <a href="https://www.youtube.com/" aria-label="Ir a su cuenta de Youtube">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube" loading="lazy"></i>
           </a>
           <a href="https://www.instagram.com/" aria-label="Ir a su cuenta de Instagram">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram" loading="lazy"></i>
           </a>
         </div>
         <div class="footer-left">
