--- a/tom-yam-kung.html
+++ b/tom-yam-kung.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Tom Yam Kung</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <link rel="stylesheet" href="fonts/css/all.min.css">
-
 </head>
 
 <body class="body-white">
@@ -343,5 +341,6 @@
     </footer>
 
     <script async src="javascript/comun.js"></script>
+    <script async src="fonts/js/all.min.js"></script>
   </body>
 </html>
