--- a/recetas.html
+++ b/recetas.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Recetas</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
-  <link rel="stylesheet" href="fonts/css/all.min.css">
 </head>
 
 <body>
@@ -163,5 +162,6 @@
     </footer>
 
     <script async src="javascript/comun.js"></script>
+    <script async src="fonts/js/all.min.js"></script>
   </body>
 </html>
