--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Sobre nosotros</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
-  <link rel="stylesheet" href="fonts/css/all.min.css">
-
 </head>
 
 <body>
@@ -223,5 +221,6 @@
 
     <script async src="javascript/sobre-nosotros.js"></script>
     <script async src="javascript/comun.js"></script>
+    <script async src="fonts/js/all.min.js"></script>
   </body>
 </html>
