--- a/kaeng-phet-gai.html
+++ b/kaeng-phet-gai.html
@@ -16,8 +16,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
+          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo" loading="lazy">
+          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
