--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -15,8 +15,8 @@
     <nav>         
       <a href="index.html">
         <div>
-          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo">
-          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce">
+          <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo" loading="lazy">
+          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
@@ -46,7 +46,7 @@
       </div>
       
       <div class="about-us-description">
-        <img src="img/logotipo.svg" alt="logotipo de DOM SUM">
+        <img src="img/logotipo.svg" alt="logotipo de DOM SUM"  loading="lazy">
         <p>Encantados de conocerte, somos cuatro amigos a los que nos apasiona viajar e investigar sobre la gastronomía de los lugares que tenemos el placer de visitar. Hemos decidido hacer este blog para dar a conocer un poquito más la comida de Tailandia, son muchas las personas que se deciden a viajar a Tailandia por sus playas e increíble clima cálido pero no todo el mundo es consciente de la riqueza gastronómica de mi país, con infinidad de platos, ingredientes y sabores que sorprenden al viajero que decide a probarlos.</p>
       </div>
     </section>
