--- a/recetas.html
+++ b/recetas.html
@@ -17,6 +17,7 @@
       <a href="index.html">
         <div>
           <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo" loading="lazy">
+          <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce" loading="lazy">
           <p>Gastronomía tailandesa</p>
         </div>
       </a>
