--- a/recetas.html
+++ b/recetas.html
@@ -134,32 +134,32 @@
     </article>
   </main>
 
-   <footer>
-      <div>
-        <div class="footer-right">
-          <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://www.youtube.com/" aria-label="Ir a su cuenta de Youtube">
-            <i class="fab fa-youtube"></i>
-          </a>
-          <a href="https://www.instagram.com/" aria-label="Ir a su cuenta de Instagram">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </div>
-        <div class="footer-left">
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="recetas.html">Recetas</a></li>
-            <li><a href="sobre-nosotros.html">Sobre nosotros</a></li>
-            <li><a href="documentacion.html">Documentación</a></li>
-          </ul>
-        </div>
+  <footer>
+    <div>
+      <div class="footer-right">
+        <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
+          <i class="fab fa-facebook-f" loading="lazy"></i>
+        </a>
+        <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
+          <i class="fab fa-twitter" loading="lazy"></i>
+        </a>
+        <a href="https://www.youtube.com/" aria-label="Ir a su cuenta de Youtube">
+          <i class="fab fa-youtube" loading="lazy"></i>
+        </a>
+        <a href="https://www.instagram.com/" aria-label="Ir a su cuenta de Instagram">
+          <i class="fab fa-instagram" loading="lazy"></i>
+        </a>
       </div>
-    </footer>
+      <div class="footer-left">
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="recetas.html">Recetas</a></li>
+          <li><a href="sobre-nosotros.html">Sobre nosotros</a></li>
+          <li><a href="documentacion.html">Documentación</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
     <script async src="javascript/comun.js"></script>
     <script async src="fonts/js/all.min.js"></script>
