--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <source media="(max-width: 576px)" srcset="img/background-index-576.webp">
         <source media="(max-width: 992px)" srcset="img/background-index-992.webp">
         <source media="(min-width: 993px)" srcset="img/background-index-1280.webp">
-        <img src="img/background-index-1280.jpg" alt="Mercado flotante Khlong Lat Mayom"  loading="lazy">
+        <img data-src="img/background-index-1280.jpg" alt="Mercado flotante Khlong Lat Mayom"  class="lazyload" loading="lazy">
       </picture>    
     </section>
 
@@ -65,7 +65,7 @@
               <source media="(max-width: 576px)" srcset="img/destacado-recetas-576.webp">
               <source media="(max-width: 992px)" srcset="img/destacado-recetas-992.webp">
               <source media="(min-width: 993px)" srcset="img/destacado-recetas-1280.webp">
-              <img src="img/destacado-recetas-1280.jpg" alt="Thai Cookery School"  loading="lazy">
+              <img data-src="img/destacado-recetas-1280.jpg" alt="Thai Cookery School"  class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
               <i class="fas fa-map-marker-alt"></i>
@@ -82,7 +82,7 @@
               <source media="(max-width: 576px)" srcset="img/destacado-naturaleza-576.webp">
               <source media="(max-width: 992px)" srcset="img/destacado-naturaleza-992.webp">
               <source media="(min-width: 993px)" srcset="img/destacado-naturaleza-1280.webp">
-              <img src="img/destacado-naturaleza-1280.jpg" alt="Boon Lott’s Elephant Sanctuary" loading="lazy">
+              <img data-src="img/destacado-naturaleza-1280.jpg" alt="Boon Lott’s Elephant Sanctuary"  class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
               <i class="fas fa-map-marker-alt"></i>
@@ -99,7 +99,7 @@
               <source media="(max-width: 576px)" srcset="img/destacado-tradicion-576.webp">
               <source media="(max-width: 992px)" srcset="img/destacado-tradicion-992.webp">
               <source media="(min-width: 993px)" srcset="img/destacado-tradicion-1280.webp">
-              <img src="img/destacado-tradicion-1280.jpg" alt="Sala Chalermkrung Royal Theatre" loading="lazy">
+              <img data-src="img/destacado-tradicion-1280.jpg" alt="Sala Chalermkrung Royal Theatre" class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
               <i class="fas fa-map-marker-alt"></i>
@@ -118,7 +118,7 @@
           <source media="(max-width: 576px)" srcset="img/turismo-576.webp">
           <source media="(max-width: 992px)" srcset="img/turismo-992.webp">
           <source media="(min-width: 993px)" srcset="img/turismo-1280.webp">
-          <img src="img/turismo-1280.jpg" alt="Khao Lak" loading="lazy">
+          <img data-src="img/turismo-1280.jpg" alt="Khao Lak" class="lazyload" loading="lazy">
         </picture>
       </section>
     </main>
