--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
 </head>
 
@@ -153,6 +151,7 @@
 
     <script async src="javascript/index.js"></script>
     <script async src="javascript/comun.js"></script>
+    <link async rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 
   </body>
 </html>
