--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
       <div>
         <div class="footer-right">
           <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
-            <i class="fab fa-facebook-f" loading="lazy"></i>
+            <img src="img/facebook-f-brands.svg" alt="logotipo de facebook" loading="lazy">
           </a>
           <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
-            <i class="fab fa-twitter" loading="lazy"></i>
+            <img src="img/twitter-brands.svg" alt="logotipo de twitter" loading="lazy">
           </a>
           <a href="https://www.youtube.com/" aria-label="Ir a su cuenta de Youtube">
-            <i class="fab fa-youtube" loading="lazy"></i>
+            <img src="img/youtube-brands.svg" alt="logotipo de youtube" loading="lazy">
           </a>
           <a href="https://www.instagram.com/" aria-label="Ir a su cuenta de Instagram">
-            <i class="fab fa-instagram" loading="lazy"></i>
+            <img src="img/instagram-brands.svg" alt="logotipo de instagram" loading="lazy">
           </a>
         </div>
         <div class="footer-left">
