--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -192,22 +192,23 @@
       </div>
     </section>
   </main>
-
+  
   <footer>
-    <div class="footer-right">
-      <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
-        <img src="img/facebook-f-brands.svg" alt="logotipo de facebook" loading="lazy">
-      </a>
-      <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
-        <img src="img/twitter-brands.svg" alt="logotipo de twitter" loading="lazy">
-      </a>
-      <a href="https://www.youtube.com/" aria-label="Ir a su cuenta de Youtube">
-        <img src="img/youtube-brands.svg" alt="logotipo de youtube" loading="lazy">
-      </a>
-      <a href="https://www.instagram.com/" aria-label="Ir a su cuenta de Instagram">
-        <img src="img/instagram-brands.svg" alt="logotipo de instagram" loading="lazy">
-      </a>
-    </div>
+    <div>
+      <div class="footer-right">
+        <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
+          <img src="img/facebook-f-brands.svg" alt="logotipo de facebook" loading="lazy">
+        </a>
+        <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
+          <img src="img/twitter-brands.svg" alt="logotipo de twitter" loading="lazy">
+        </a>
+        <a href="https://www.youtube.com/" aria-label="Ir a su cuenta de Youtube">
+          <img src="img/youtube-brands.svg" alt="logotipo de youtube" loading="lazy">
+        </a>
+        <a href="https://www.instagram.com/" aria-label="Ir a su cuenta de Instagram">
+          <img src="img/instagram-brands.svg" alt="logotipo de instagram" loading="lazy">
+        </a>
+      </div>
       <div class="footer-left">
         <ul>
           <li><a href="index.html">Inicio</a></li>
