--- a/documentacion.html
+++ b/documentacion.html
@@ -217,6 +217,6 @@
     </div>
   </footer>
 
-  <script async src="javascript/comun.js"></script>
+  <script async src="javascript/index.js"></script>
 </body>
 </html>
