--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -192,7 +192,7 @@
       </div>
     </section>
   </main>
-  
+
   <footer>
     <div>
       <div class="footer-right">
@@ -221,6 +221,6 @@
   </footer>
 
     <script async src="javascript/sobre-nosotros.js"></script>
-    <script async src="javascript/comun.js"></script>
+    <script async src="javascript/index.js"></script>
   </body>
 </html>
