--- a/kaeng-phet-gai.html
+++ b/kaeng-phet-gai.html
@@ -344,6 +344,6 @@
     </div>
   </footer>
 
-    <script async src="javascript/comun.js"></script>
+    <script async src="javascript/index.js"></script>
   </body>
 </html>
