--- a/recetas.html
+++ b/recetas.html
@@ -161,6 +161,6 @@
     </div>
   </footer>
 
-    <script async src="javascript/comun.js"></script>
+    <script async src="javascript/index.js"></script>
   </body>
 </html>
