--- a/tom-yam-kung.html
+++ b/tom-yam-kung.html
@@ -340,6 +340,6 @@
     </div>
   </footer>
 
-    <script async src="javascript/comun.js"></script>
+    <script async src="javascript/index.js"></script>
   </body>
 </html>
