--- a/documentacion.html
+++ b/documentacion.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles/style.css"> 
+  <link rel="stylesheet" type="text/css" href="style.css"> 
   <title>DOM SUM | Documentación</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
 </head>
