--- a/recetas.html
+++ b/recetas.html
@@ -6,7 +6,7 @@
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css"> 
-  <title>DOM SUM | Recetas1</title>
+  <title>DOM SUM | Recetas</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
 </head>
 
