--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -6,7 +6,7 @@
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css"> 
-  <title>DOM SUM | Sobre nosotros1</title>
+  <title>DOM SUM | Sobre nosotros</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
 </head>
 
