--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div>
           <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo" loading="lazy">
           <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce" loading="lazy">
-          <p>Gastronomía tailandesa1</p>
+          <p>Gastronomía tailandesa</p>
         </div>
       </a>
 
