--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       </a>
 
       <ul>
-        <li><a href="index.html" class="activo prueba">Inicio</a></li>
-        <li><a href="recetas.html"  class="prueba">Recetas</a></li>
-        <li><a href="sobre-nosotros.html" class="prueba">Sobre nosotros</a></li>
-        <li><a href="documentacion.html" class="prueba">Documentación</a></li>
+        <li><a href="index.html" class="activo">Inicio</a></li>
+        <li><a href="recetas.html">Recetas</a></li>
+        <li><a href="sobre-nosotros.html">Sobre nosotros</a></li>
+        <li><a href="documentacion.html">Documentación</a></li>
       </ul>
 
       <button class="menu-ham" type="button">   
