--- a/documentacion.html
+++ b/documentacion.html
@@ -6,7 +6,7 @@
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css"> 
-  <title>DOM SUM | Documentación</title>
+          <p> | Gastronomía tailandesa</p>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
 </head>
 
@@ -17,7 +17,7 @@
         <div>
           <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo" loading="lazy">
           <img src="img/logotipo-reducido.svg" alt="logotipo reducido de DOM SUM" class="logo-reduce" loading="lazy">
-          <p>Gastronomía tailandesa</p>
+          <p> | Gastronomía tailandesa</p>
         </div>
       </a>
 
