--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <img data-src="img/destacado-recetas-1280.jpg" alt="Thai Cookery School"  class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
-              <img src="img/map-marker-alt-solid.svg" alt="icono localización" loading="lazy">
+              <img src="img/map-marker-alt-solid.svg" alt="icono localización" loading="lazy" class="map">
               <p>Thai Cookery School, Chiang Mai</p>
               <p>La gastronomía de Tailandia suele ser algo picante pero con una mezcla de sabores y olores. Se caracteriza por su mezcla equilibrada de sabores ácidos, salados, dulces y picantes. Los productos más utilizados en la cocina tailandesa son verduras, carne, sopas de noodles o con ellos, y hierbas servidas sobre el arroz. De esto surgen una gran multitud de distintos platos.</p>
             </div>
@@ -84,7 +84,7 @@
               <img data-src="img/destacado-naturaleza-1280.jpg" alt="Boon Lott’s Elephant Sanctuary"  class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
-              <img src="img/map-marker-alt-solid.svg" alt="icono localización" loading="lazy">
+              <img src="img/map-marker-alt-solid.svg" alt="icono localización" loading="lazy" class="map">
               <p>Boon Lott’s Elephant Sanctuary, Sukhothai</p>
               <p>El elefante blanco es considerado el animal más sagrado, venerado desde hace más de 5.000 años y símbolo de la realeza tailandesa que representa la prosperidad del país. Según cuenta la leyenda, la princesa Maya soñó que un elefante blanco de seis colmillos entraba en su cuerpo engendrando al mismísimo Buda.</p>
             </div>
@@ -101,7 +101,7 @@
               <img data-src="img/destacado-tradicion-1280.jpg" alt="Sala Chalermkrung Royal Theatre" class="lazyload" loading="lazy">
             </picture>
             <div class="content-box-clip-path">
-              <img src="img/map-marker-alt-solid.svg" alt="icono localización" loading="lazy">
+              <img src="img/map-marker-alt-solid.svg" alt="icono localización" loading="lazy" class="map">
               <p>Sala Chalermkrung Royal Theatre, Bangkok</p>
               <p>La danza tailandesa hizo las delicias de la realeza durante varias dinastías, especialmente en la Sukhothai, la Ayutthaya y la Rattanakosin. Con estos bailes se celebran épocas como la cosecha, las fechas religiosas más señaladas y otros momentos importantes para la comunidad.</p>
             </div>
