--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <footer>
       <div>
-        div class="footer-right">
+        <div class="footer-right">
           <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
             <i class="fab fa-facebook-f"></i>
           </a>
