--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" type="text/css" href="style.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-
 </head>
 
 <body class="body-index">
@@ -128,16 +126,16 @@
       <div>
         <div class="footer-right">
           <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
-            <i class="fab fa-facebook-f"></i>
+            <img src="img/facebook-f-brands.svg" alt="logotipo de facebook" loading="lazy">
           </a>
           <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
-            <i class="fab fa-twitter"></i>
+            <img src="img/twitter-brands.svg" alt="logotipo de twitter" loading="lazy">
           </a>
           <a href="https://www.youtube.com/" aria-label="Ir a su cuenta de Youtube">
-            <i class="fab fa-youtube"></i>
+            <img src="img/youtube-brands.svg" alt="logotipo de youtube" loading="lazy">
           </a>
           <a href="https://www.instagram.com/" aria-label="Ir a su cuenta de Instagram">
-            <i class="fab fa-instagram"></i>
+            <img src="img/instagram-brands.svg" alt="logotipo de instagram" loading="lazy">
           </a>
         </div>
         <div class="footer-left">
